# se-toolkit-lab-8

./: .env.docker.example  .env.docker.secret.bak  .gitattributes  .gitignore  REPORT.md  docker-compose.yml
backend/src/lms_backend/routers/: items.py
mcp/mcp-obs/: pyproject.toml
mcp/mcp-obs/src/mcp_obs/: server.py
nanobot/: Dockerfile  entrypoint.py
nanobot/workspace/skills/lms/: SKILL.md
nanobot/workspace/skills/observability/: SKILL.md
