[project]
name = "mcp-obs"
version = "0.1.0"
description = "MCP tools for VictoriaLogs and VictoriaTraces"
requires-python = ">=3.12"
dependencies = [
  "fastmcp>=2.0.0",
  "httpx>=0.27.0",
  "pydantic>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_obs"]
